object/chapter1/example/src/bad/Invitation.java
package bad;

import java.time.LocalDateTime;

class Invitation {
    private LocalDateTime when;
}